Thu Nov  6 10:17:51 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_set_string, strio_reopen): check
	  tainted.

	* ext/stringio/stringio.c (strio_copy, strio_ungetc, strio_write,
	  strio_putc): add infection.

	* ext/stringio/stringio.c (strio_path): just nil.  [ruby-dev:21846]

	* ruby.c (proc_options): reserve searched script path in the
	  source file name table.  [ruby-list:38765]

Wed Nov  5 23:49:45 2003  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* sample/openssl/gen_csr.rb: there (at least) is a CA which does not
	  accept DN in UTF8STRING format.  it's a sample.

Wed Nov  5 22:55:16 2003  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* configure.in, eval.c, signal.c: : add '--with-pthread-ext'
	  option to fix the pthread trouble on 'tcltklib'

	* ext/tcltklib/README.1st: add the description of '--with-pthread-ext'

	* ext/tk/lib/tktext.rb : add TkText#text_copy, text_cut, text_paste
	  to support Tcl/Tk8.4's tk_textCopy, tk_textCut, tk_textPaste

	* ext/tk/lib/tk.rb : add TkMenu#set_focus support Tcl/Tk's
	  tk_menuSetFocus

Wed Nov  5 19:08:47 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser::Switch::PlacedArgument::parse):
	  do not remove next argument if empty value is placed.

	* test/optparse: added.

Wed Nov  5 17:05:18 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/ui/gtk/testrunner.rb: typo.

Wed Nov  5 11:13:32 2003  NAKAMURA Usaku <usa@ruby-lang.org>

	* string.c: add #include "version.h". this file still depends on it.

	* Makefile.in, bcc32/Makefile.sub, win32/Makefile.sub,
	  wince/Makefile.sub: add version.h dependency to string.c.

Wed Nov  5 09:14:23 2003  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/monitor.rb: revert to the previous revision.

Wed Nov  5 08:39:51 2003  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/https.rb (HTTPRequest#parse): set @client_cert_chain.

	* lib/webrick/https.rb (HTTPRequest#meta_vars): create